Specific welcome message for TestDemo1

--- a/src/ReadingTime3.Web/Views/Home/Index.cshtml
+++ b/src/ReadingTime3.Web/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">It's Reading Time with Customer</h1>
+    <h1 class="display-4">It's Reading Time with TestDemo1</h1>
     <div class="shadow-lg p-4 mb-4 bg-white">
         <h2 class="h2">
             <a class="btn btn-primary" asp-area="" asp-controller="Book" asp-action="Index">View Inventory</a>
